--- a/src/app/nuevoContacto/nuevoContacto.component.html
+++ b/src/app/nuevoContacto/nuevoContacto.component.html
@@ -1,6 +1,6 @@
 <div class="form-group">
   <label>Nombre y Apellido</label>
-  <input type="text" class="form-control" [(ngModel)]="NuevoNombreYAppellido">
+  <input type="text" class="form-control" [(ngModel)]="NuevoNombreApellido">
   <br>
   <label>Telefono</label>
   <input type="text" class="form-control" [(ngModel)]="NuevoTelefono">
