nuevo comp editarContacto pero no bindea con el contacto seleccionado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div>
 <app-contactos></app-contactos>
-<br><br>
+<br>
 <app-nuevoContacto></app-nuevoContacto>
+<br>
+<app-editarContacto></app-editarContacto>
 </div>
