--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<div>
-<app-contactos></app-contactos>
-<br>
-<app-nuevoContacto></app-nuevoContacto>
-<br>
-<app-editarContacto></app-editarContacto>
-</div>
+<router-outlet></router-outlet>
+
