--- a/src/app/contactos/contactos.component.html
+++ b/src/app/contactos/contactos.component.html
@@ -33,8 +33,8 @@
         </label>
       </table>
     </div>
-    <button (click)="cambiarFavorito()" disabled="hayAlgunoSeleccionado()">favorito</button>
-    <button [routerLink]="['/edicion']" disabled="hayAlgunoSeleccionado()" >Editar</button>
+    <button (click)="cambiarFavorito()" >favorito</button>
+    <button [routerLink]="['/edicion']"  >Editar</button>
     <button [routerLink]="['/nuevo']"  >Crear uno Nuevo</button>
   </div>
 </div>
