--- a/src/app/contactos/contactos.component.html
+++ b/src/app/contactos/contactos.component.html
@@ -28,13 +28,13 @@
             </td>
           </tr>
         </tbody>
-        <label *ngIf="contactoSeleccionado">
-          {{contactoSeleccionado.nombreApellido}}
-        </label>
       </table>
     </div>
     <button (click)="cambiarFavorito()" >favorito</button>
     <button [routerLink]="['/edicion']"  >Editar</button>
     <button [routerLink]="['/nuevo']"  >Crear uno Nuevo</button>
   </div>
+  <label *ngIf="contactoSeleccionado">
+    Contacto Seleccionado =  
+    {{contactoSeleccionado.nombreApellido}}</label>
 </div>
