se agrega el limpiar busqueda

--- a/src/app/contactos/contactos.component.html
+++ b/src/app/contactos/contactos.component.html
@@ -9,6 +9,7 @@
       <label>Buscador de Contactos</label>
       <input type="text" class="form-control" placeholder="Ingrese Nombre o telefono completo" [(ngModel)]="stringBuscado">
       <button (click)="buscar()">Buscar</button>
+      <button (click)="limpiarBusqueda()">Limpiar busqueda</button>
     </div>
     <br>
     <div class="row" class="table-responsive">
